Update the home page and fix broken links
This commit adds a working home page to the site with links pointing
back to the existing/legacy handbook while wrok is done for a cut over
of existing handbook content.

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://gitlab-com.gitlab.io/content-sites/handbook
+baseURL: https://handbook.gitlab.com
 languageCode: en-us
 title: The GitLab Handbook
 
