--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -7,6 +7,7 @@
   "no-emphasis-as-heading": false,
   "no-multiple-blanks": false,
   "no-trailing-punctuation": false,
+  "no-duplicate-heading": false,
   "heading-increment": false,
   "heading-style": {
     "style": "atx"
