--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -6,6 +6,7 @@ no-bare-urls: false
 no-emphasis-as-heading: false
 no-multiple-blanks: false
 no-trailing-punctuation: false
+no-duplicate-heading: false
 heading-increment: false
 heading-style:
   style: atx
